[metadata]
name = orgutils
version = 0.0.1
author = Shane Allcroft
author_email = shane@fedoraproject.org
description = Parsing and handling emacs org mode files in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shaneallcroft/orgutils
project_urls =
    Bug Tracker = https://github.com/shaneallcroft/orgutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src